--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.0.0",
     "node-fetch": "^2.7.0",
-    "openai": "^4.104.0"
+    "pdf-parse": "^1.1.1",
+    "multer": "^1.4.4"
   }
 }
