--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.4",
     "node-fetch": "^2.7.0",
-    "pdf-parse": "^1.1.1",
-    "multer": "^1.4.4"
+    "pdf-parse": "^1.1.1"
   }
 }
